modifying skip button style make it responsive make it aligned correctly not stick to header and its border doesnt show well relates #54194

--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -23,7 +23,6 @@
 @media screen and (max-width:500px) {
   .skip-to-content-button{
     padding-block: 0.5em;
-    padding-inline:.75em;
     font-size:16px;
   }
 }
